✨ Transform FastForge to FastCraft with Rich CLI styling
- Rename package from fastforge to fastcraft
- Add modern Rich styling with emojis and colors
- Update all branding to FastCraft
- Fix test assertions for new CLI output
- Update templates and documentation
- Maintain all existing functionality

--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,7 @@ cython_debug/
 # VS Code
 .vscode/
 
-# FastForge specific
+# FastCraft specific
 # Generated projects (for testing)
 test-*/
 my-*/
