fix: rename project to fascraft to resolve PyPI naming conflict
- Update pyproject.toml project name
- Rename package directory from fastcraft to fascraft
- Update all import statements and references
- Update documentation and README references

--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,7 @@ cython_debug/
 # VS Code
 .vscode/
 
-# FastCraft specific
+# FasCraft specific
 # Generated projects (for testing)
 test-*/
 my-*/
