--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10"
 typer = "^0.16.0"
 jinja2 = "^3.1.0"
 rich = "^14.0.0"
+tomli-w = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
