--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,15 @@ tomli-w = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
 black = "^24.0.0"
 ruff = "^0.2.0"
 isort = "^5.13.0"
 flake8 = "^7.0.0"
 pre-commit = "^3.6.0"
 twine = "^6.1.0"
+bandit = "^1.7.5"
+safety = "^2.3.5"
 
 [build-system]
 requires = ["poetry-core"]
@@ -55,11 +58,12 @@ extend-exclude = '''
 [tool.ruff]
 target-version = "py310"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
-    "I",  # isort
     "B",  # flake8-bugbear
     "C4", # flake8-comprehensions
     "UP", # pyupgrade
@@ -70,14 +74,11 @@ ignore = [
     "C901",  # too complex
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "tests/*" = ["E501", "B011"]  # line length and assert in tests
 
-[tool.ruff.isort]
-known-first-party = ["fascraft"]
-known-third-party = ["typer", "jinja2", "pytest", "pathlib"]
-section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
+
 
 [tool.ruff.format]
 quote-style = "double"
@@ -94,3 +95,23 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+# pytest configuration
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "--cov=fascraft",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+    "--cov-fail-under=80"
+]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests"
+]
