--- a/examples/auth-api/pyproject.toml
+++ b/examples/auth-api/pyproject.toml
@@ -77,7 +77,10 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 target-version = "py310"
 line-length = 88
+
+[tool.ruff.lint]
 select = ["E", "W", "F", "I", "B", "C4", "UP"]
+ignore = ["B008"]
 
 [tool.black]
 line-length = 88
