--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ typer = "^0.16.0"
 jinja2 = "^3.1.0"
 rich = "^14.0.0"
 tomli-w = "^1.0.0"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -78,8 +79,6 @@ ignore = [
 "__init__.py" = ["F401"]
 "tests/*" = ["E501", "B011"]  # line length and assert in tests
 
-
-
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
@@ -108,10 +107,25 @@ addopts = [
     "--cov=fascraft",
     "--cov-report=term-missing",
     "--cov-report=html",
-    "--cov-fail-under=80"
+    "--cov-fail-under=70"
 ]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
     "unit: marks tests as unit tests"
+]
+
+# Coverage configuration
+[tool.coverage.run]
+omit = [
+    "*/templates/*",
+    "*.jinja2",
+    "*/__pycache__/*",
+    "*/tests/*",
+    "*/venv/*",
+    "*/env/*",
+    "*/.venv/*",
+    "*/.env/*",
+    "*/htmlcov/*",
+    "*/coverage/*"
 ]
