--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ typer = "^0.16.0"
 jinja2 = "^3.1.0"
 rich = "^14.0.0"
 tomli-w = "^1.0.0"
+tomli = "^1.2.3"
 pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
