--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ flake8 = "^7.0.0"
 pre-commit = "^3.6.0"
 twine = "^6.1.0"
 bandit = "^1.7.5"
-safety = "^2.3.5"
+pip-audit = "^2.6.0"
 
 [build-system]
 requires = ["poetry-core"]
